--- a/notebooks/Kaggle_Ayuda.ipynb
+++ b/notebooks/Kaggle_Ayuda.ipynb
@@ -16,10 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,11 +36,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>laptop_ID</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>268</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Inspiron 5567</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Core i7 7500U 2.7GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>AMD Radeon R7 M445</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.36kg</td>\n",
+       "      <td>749.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>347</td>\n",
+       "      <td>867</td>\n",
+       "      <td>Asus</td>\n",
+       "      <td>X541NA (N4200/4GB/1TB/W10)</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Pentium Quad Core N4200 1.1GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>Intel HD Graphics 505</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2kg</td>\n",
+       "      <td>449.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>353</td>\n",
+       "      <td>966</td>\n",
+       "      <td>Toshiba</td>\n",
+       "      <td>Portege Z30-C-1CW</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 6200U 2.3GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 520</td>\n",
+       "      <td>Windows 7</td>\n",
+       "      <td>1.2kg</td>\n",
+       "      <td>1460.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>578</td>\n",
+       "      <td>767</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Alienware 17</td>\n",
+       "      <td>Gaming</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>IPS Panel 4K Ultra HD 3840x2160</td>\n",
+       "      <td>Intel Core i7 7700HQ 2.8GHz</td>\n",
+       "      <td>16GB</td>\n",
+       "      <td>256GB SSD +  1TB HDD</td>\n",
+       "      <td>Nvidia GeForce GTX 1070</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>4.42kg</td>\n",
+       "      <td>2868.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1241</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Latitude E7270</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>Full HD / Touchscreen 1920x1080</td>\n",
+       "      <td>Intel Core i5 6300U 2.4GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 520</td>\n",
+       "      <td>Windows 7</td>\n",
+       "      <td>1.26kg</td>\n",
+       "      <td>1713.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>89</td>\n",
+       "      <td>973</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Chromebook C738T-C2EJ</td>\n",
+       "      <td>2 in 1 Convertible</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>IPS Panel Touchscreen 1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core N3060 1.6GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>32GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 400</td>\n",
+       "      <td>Chrome OS</td>\n",
+       "      <td>1.25kg</td>\n",
+       "      <td>389.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>716</td>\n",
+       "      <td>1018</td>\n",
+       "      <td>Toshiba</td>\n",
+       "      <td>Portege Z30-C-16H</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 6200U 2.3GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>128GB SSD</td>\n",
+       "      <td>Intel HD Graphics 520</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.2kg</td>\n",
+       "      <td>1195.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
+       "      <td>517</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Aspire ES1-523</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>AMD A8-Series 7410 2.2GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>AMD Radeon R5</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.4kg</td>\n",
+       "      <td>449.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>910</th>\n",
+       "      <td>891</td>\n",
+       "      <td>965</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Latitude 7480</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 7600U 2.8GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.36kg</td>\n",
+       "      <td>1775.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>911</th>\n",
+       "      <td>1179</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Inspiron 3567</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Core i7 7500U 2.7GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>AMD Radeon R5 M430</td>\n",
+       "      <td>Linux</td>\n",
+       "      <td>2.3kg</td>\n",
+       "      <td>805.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>912 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  laptop_ID  Company                     Product            TypeName  \\\n",
+       "0     268       1002     Dell               Inspiron 5567            Notebook   \n",
+       "1     347        867     Asus  X541NA (N4200/4GB/1TB/W10)            Notebook   \n",
+       "2     353        966  Toshiba           Portege Z30-C-1CW            Notebook   \n",
+       "3     578        767     Dell                Alienware 17              Gaming   \n",
+       "4      42       1241     Dell              Latitude E7270           Ultrabook   \n",
+       "..    ...        ...      ...                         ...                 ...   \n",
+       "907    89        973     Acer       Chromebook C738T-C2EJ  2 in 1 Convertible   \n",
+       "908   716       1018  Toshiba           Portege Z30-C-16H            Notebook   \n",
+       "909   517       1071     Acer              Aspire ES1-523            Notebook   \n",
+       "910   891        965     Dell               Latitude 7480           Ultrabook   \n",
+       "911  1179       1313     Dell               Inspiron 3567            Notebook   \n",
+       "\n",
+       "     Inches                 ScreenResolution  \\\n",
+       "0      15.6                         1366x768   \n",
+       "1      15.6                         1366x768   \n",
+       "2      13.3                Full HD 1920x1080   \n",
+       "3      15.6  IPS Panel 4K Ultra HD 3840x2160   \n",
+       "4      12.5  Full HD / Touchscreen 1920x1080   \n",
+       "..      ...                              ...   \n",
+       "907    11.6   IPS Panel Touchscreen 1366x768   \n",
+       "908    13.3                Full HD 1920x1080   \n",
+       "909    15.6                         1366x768   \n",
+       "910    14.0                Full HD 1920x1080   \n",
+       "911    15.6                         1366x768   \n",
+       "\n",
+       "                                      Cpu   Ram                Memory  \\\n",
+       "0              Intel Core i7 7500U 2.7GHz   8GB               1TB HDD   \n",
+       "1    Intel Pentium Quad Core N4200 1.1GHz   4GB               1TB HDD   \n",
+       "2              Intel Core i5 6200U 2.3GHz   8GB             256GB SSD   \n",
+       "3             Intel Core i7 7700HQ 2.8GHz  16GB  256GB SSD +  1TB HDD   \n",
+       "4              Intel Core i5 6300U 2.4GHz   8GB             256GB SSD   \n",
+       "..                                    ...   ...                   ...   \n",
+       "907  Intel Celeron Dual Core N3060 1.6GHz   4GB    32GB Flash Storage   \n",
+       "908            Intel Core i5 6200U 2.3GHz   4GB             128GB SSD   \n",
+       "909             AMD A8-Series 7410 2.2GHz   8GB               1TB HDD   \n",
+       "910            Intel Core i7 7600U 2.8GHz   8GB             256GB SSD   \n",
+       "911            Intel Core i7 7500U 2.7GHz   8GB               1TB HDD   \n",
+       "\n",
+       "                         Gpu       OpSys  Weight  Price_euros  \n",
+       "0         AMD Radeon R7 M445  Windows 10  2.36kg       749.00  \n",
+       "1      Intel HD Graphics 505  Windows 10     2kg       449.00  \n",
+       "2      Intel HD Graphics 520   Windows 7   1.2kg      1460.00  \n",
+       "3    Nvidia GeForce GTX 1070  Windows 10  4.42kg      2868.99  \n",
+       "4      Intel HD Graphics 520   Windows 7  1.26kg      1713.37  \n",
+       "..                       ...         ...     ...          ...  \n",
+       "907    Intel HD Graphics 400   Chrome OS  1.25kg       389.00  \n",
+       "908    Intel HD Graphics 520  Windows 10   1.2kg      1195.00  \n",
+       "909            AMD Radeon R5  Windows 10   2.4kg       449.00  \n",
+       "910    Intel HD Graphics 620  Windows 10  1.36kg      1775.00  \n",
+       "911       AMD Radeon R5 M430       Linux   2.3kg       805.99  \n",
+       "\n",
+       "[912 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Para que funcione necesitas bajarte los archivos de datos de Kaggle \n"
+    "df = pd.read_csv('./data/train.csv')\n",
+    "df"
    ]
   },
   {
@@ -45,11 +343,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Variables a desechar: ID, laptop_ID, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 912 entries, 0 to 911\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   id                912 non-null    int64  \n",
+      " 1   laptop_ID         912 non-null    int64  \n",
+      " 2   Company           912 non-null    object \n",
+      " 3   Product           912 non-null    object \n",
+      " 4   TypeName          912 non-null    object \n",
+      " 5   Inches            912 non-null    float64\n",
+      " 6   ScreenResolution  912 non-null    object \n",
+      " 7   Cpu               912 non-null    object \n",
+      " 8   Ram               912 non-null    object \n",
+      " 9   Memory            912 non-null    object \n",
+      " 10  Gpu               912 non-null    object \n",
+      " 11  OpSys             912 non-null    object \n",
+      " 12  Weight            912 non-null    object \n",
+      " 13  Price_euros       912 non-null    float64\n",
+      "dtypes: float64(2), int64(2), object(10)\n",
+      "memory usage: 99.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
