primeros pasos del primer modelo

--- a/notebooks/Kaggle_Ayuda copy.ipynb
+++ b/notebooks/Kaggle_Ayuda copy.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable a predecir: Price_euros\n",
+    "Variables predictoras: por defenir\n",
+    "Variables a desechar: ID, laptop_ID, "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -325,13 +334,13 @@
        "[912 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('./data/train.csv')\n",
+    "df = pd.read_csv('../data/train.csv')\n",
     "df"
    ]
   },
@@ -340,13 +349,6 @@
    "metadata": {},
    "source": [
     "## Data exploration"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Variables a desechar: ID, laptop_ID, "
    ]
   },
   {
